[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pylistenbrainz = "^0.5.1"

[tool.poetry.group.dev.dependencies]
pylistenbrainz = "^0.5.1"
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[pytest]
addopts = ["--import-mode=importlib"]
pythonpath = [
  "."
]